tests/miniJava/neg/005359_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { this public int [] java ( ) { return 0 ; } }
